# Qt

./: 42-源代码.txt  HowToUseGithub.md  README.md  test.md  widget.cpp
PDF_reader/: CMakeLists.txt  bookmark_managetool.cpp  bookmark_managetool.h  main.cpp  pdf_reader.cpp  pdf_reader.h  pdf_reader.pro  pdf_reader.pro.user.eaa1276  pdf_reader.ui  res.qrc  test_window_1.cpp  test_window_1.h  test_window_1.ui  zoom_selector.cpp  zoom_selector.cpp.autosave  zoom_selector.h  zoom_selector.ui
PdfReader/: test.md  widget.ui
